--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+
+    dataBinding{
+        enabled=true
+    }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.alexg13.partidosdex"
@@ -22,6 +27,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     packagingOptions {
         pickFirst 'META-INF/kotlinx-io.kotlin_module'
         pickFirst 'META-INF/atomicfu.kotlin_module'
@@ -63,7 +69,7 @@ dependencies {
     /*Coroutines*/
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
-
+    kapt 'com.android.databinding:compiler:2.3.1'
     /*Design*/
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:design:28.0.0'
